--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="home" class="home-section">
         <header class="header-section">
             <nav class="navbar-top">
-                <div class="container">
+                <div class="container-nav">
                     <div class="brand-logo">
                         <img src="./img/dji.png">
                     </div>
