Smooth Scroll añadido

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <li class="nav-link"><a href="#description">Description</a></li>
                             <li class="nav-link"><a href="#features">Features</a></li>
                             <li class="nav-link"><a href="#explore">Explore</a></li>
-                            <li class="nav-link"><a class="button-nav" href="#">Buy Now</a></li>
+                            <li class="nav-link"><a class="button-nav" href="#buy">Buy Now</a></li>
                         </ul>
                     </div>
                 </div>
